fix css extra spacing in edit

--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -4,4 +4,6 @@
 .center{
     display: flex;
     justify-content: center;
+    margin: auto;
+
 }
