--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,8 +1,27 @@
 .table{
     width:100%
 }
-
-.popup-content{
+.modal{
     background-color: transparent !important;
-    border:none !important;
+    border: 0 !important;
 }
+.modal-content {
+    margin: auto;
+    background:transparent;
+    width: 50%;
+    padding: 5px;
+  }
+  .modal-arrow {
+    color: rgb(255, 255, 255);
+  }
+  [role='tooltip'].modal-content {
+    width: 200px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 3px;
+  }
+  
+  .modal-overlay {
+    background: rgba(0, 0, 0, 0.5);
+  }
+  [data-popup='tooltip'].modal-overlay {
+    background: transparent;
+  }
